instagram api input success

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kenhoward/noServerProj",
   "dependencies": {
-    "express": "^4.12.2"
+    "express": "^4.12.2",
+    "request": "^2.53.0"
   }
 }
